# osi-monitor

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  README.md  build_project.sh  install_dependencies.sh  install_grafana.sh  install_prometheus_server.sh  plug_n_play.sh
include/: expose_metrics.h  metrics.h
lib/: prom.h
src/: expose_metrics.c  main.c  metrics.c
